--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "acorn": "^6.1.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-lodash": "^3.3.4",
+    "deep-freeze": "0.0.1",
     "esdoc": "^1.1.0",
     "esdoc-flow-type-plugin": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
@@ -65,7 +66,7 @@
     "flow-bin": "^0.95.1",
     "flow-typed": "^2.5.1",
     "jest": "^24.5.0",
-    "rollup": "^1.7.3",
+    "rollup": "^1.8.0",
     "rollup-all": "^1.5.2",
     "rollup-jest": "0.0.2",
     "rollup-plugin-babel": "^4.3.2",
@@ -74,9 +75,10 @@
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-npm": "^2.0.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-replace": "^2.1.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
   "files": [
@@ -86,6 +88,9 @@
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "lodash": "^4.17.11",
-    "mitt": "^1.1.3"
+    "mitt": "^1.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-starter-kit": "^0.4.3"
   }
 }
