--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
+    "get-value": "^3.0.1",
     "lodash": "^4.17.11",
     "mitt": "^1.1.3",
     "redux": "^4.0.1",
