--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,60 @@
+
 {
   "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
   "extends": [
     "airbnb-base",
     "plugin:jest/recommended",
     "plugin:flowtype/recommended"
   ],
-  "env": {
-    "es6": true
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
   },
-  "plugins": [
-    "jest",
-    "flowtype",
-  ],
   "parserOptions": {
+    "ecmaFeatures": {
+        "jsx": true,
+        "modules": true
+    },
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "plugins": [
+    "json",
+    "react",
+    "jest",
+    "flowtype"
+  ],
   "rules": {
-    // don't force es6 functions to include space before paren
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+     // Indent with 2 spaces
+    "indent": [
+      "error",
+      2,
+      {SwitchCase: 1}
+    ],
+    // Indent JSX with 2 spaces
+    "react/jsx-indent": [
+      "error",
+      2
+    ],
+    // Indent props with 2 spaces
+    "react/jsx-indent-props": [
+      "error",
+      2
+    ],
+    "max-len": ["error", { "code": 160 }],
+     // don't force es6 functions to include space before paren
     "space-before-function-paren": 0,
-
+    // console lines available
+    "no-console": "off",
     // special case for rewire __get__
     "no-underscore-dangle": ["error", { "allow": ["__get__"] }]
   }
 }
+
