--- a/package.json
+++ b/package.json
@@ -46,20 +46,22 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/runtime": "^7.4.2",
     "acorn": "^6.1.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-lodash": "^3.3.4",
     "deep-freeze": "0.0.1",
     "esdoc": "^1.1.0",
     "esdoc-flow-type-plugin": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.95.1",
     "flow-typed": "^2.5.1",
@@ -87,6 +89,7 @@
     "axios-retry": "^3.1.2",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "get-value": "^3.0.1",
+    "is-retry-allowed": "^1.1.0",
     "lodash": "^4.17.14",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
