--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "tech-admin",
   "license": "MIT",
   "repository": "cozify/JS-SDK",
-  "node": "dist/sdk-node.js",
-  "iife": "dist/sdk-browser.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "node": "dist/sdk.node.js",
+  "browser": "dist/sdk.browser.js",
+  "module": "dist/sdk.es.js",
+  "main": "dist/sdk.node.js",
+  "jsnext:main": "dist/sdk.es.js",
   "engines": {
     "node": ">=8",
     "npm": ">=5"
@@ -30,68 +31,71 @@
     "deploy": "gh-pages -d example/build",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "precommit": "flow src && npm lint && npm test",
-    "prepublishOnly": "npm test && npm run build"
+    "precommit": "npm run flow && npm run lint && npm run test",
+    "prepublishOnly": "npm run test && npm run build"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
-    "@babel/node": "^7.2.2",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/runtime": "^7.4.2",
-    "acorn": "^6.1.1",
+    "@babel/runtime": "^7.6.3",
+    "acorn": "^6.3.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-lodash": "^3.3.4",
     "deep-freeze": "0.0.1",
     "esdoc": "^1.1.0",
     "esdoc-flow-type-plugin": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
     "flow-bin": "^0.95.1",
-    "flow-typed": "^2.5.1",
-    "jest": "^24.5.0",
-    "rollup": "^1.8.0",
-    "rollup-all": "^1.5.2",
+    "flow-typed": "^2.6.2",
+    "jest": "^24.9.0",
+    "rollup": "^1.26.0",
+    "rollup-all": "^1.6.16",
     "rollup-jest": "0.0.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-cpy": "^1.1.0",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-flow-entry": "^0.3.1",
+    "rollup-plugin-flow-entry": "^0.3.3",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-npm": "^2.0.0",
-    "rollup-plugin-replace": "^2.1.1",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-uglify": "^6.0.3"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "axios-retry": "^3.1.2",
+    "core-js": "^3.3.6",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "get-value": "^3.0.1",
-    "is-retry-allowed": "^1.1.0",
+    "is-retry-allowed": "^1.2.0",
     "lodash": "^4.17.14",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-starter-kit": "^0.4.3"
   }
