--- a/.flowconfig
+++ b/.flowconfig
@@ -1,10 +1,15 @@
 [ignore]
+./browser-example/.*
+./docs/.*
+./example/.*
+./node-example/.*
+./dist/*
 .*/lib/.*
 .*/flow-coverage/.*
+./rollup.config.js
+
 
 [include]
-
-[untyped]
 
 [libs]
 
