--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozify-sdk",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "JavaScript SDK for Cozify REST API",
   "author": "tech-admin",
   "license": "MIT",
@@ -32,7 +32,7 @@
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "precommit": "npm run flow && npm run lint && npm run test",
-    "prepublishOnly": "npm run test && npm run build"
+    "prepublish": "npm run flow && npm run test && npm run docs && npm run build"
   },
   "peerDependencies": {},
   "devDependencies": {
