--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "build": "rollup -c",
     "start": "rollup -c -w",
     "test": "jest src",
+    "test:alarms": "jest src/reducers/alarms.test.js",
+    "test:connections": "jest src/reducers/connections.test.js",
+    "test:devices": "jest src/reducers/devices.test.js",
+    "test:hubs": "jest src/reducers/hubs.test.js",
+    "test:pairings": "jest src/reducers/pairings.test.js",
+    "test:plans": "jest src/reducers/plans.test.js",
+    "test:rooms": "jest src/reducers/rooms.test.js",
+    "test:user": "jest src/reducers/user.test.js",
     "test:watch": "jest src --watch --notify",
     "cover": "jest src --coverage",
     "flow": "flow",
@@ -89,6 +97,7 @@
     "dist"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.2",
     "axios": "^0.19.0",
     "axios-retry": "^3.1.2",
     "core-js": "^3.3.6",
@@ -97,7 +106,6 @@
     "is-retry-allowed": "^1.2.0",
     "lodash": "^4.17.14",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-starter-kit": "^0.4.3"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
