--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:devices": "jest src/reducers/devices.test.js",
     "test:hubs": "jest src/reducers/hubs.test.js",
     "test:pairings": "jest src/reducers/pairings.test.js",
+    "test:idea": "jest src/reducers/idea.test.js",
     "test:plans": "jest src/reducers/plans.test.js",
     "test:rooms": "jest src/reducers/rooms.test.js",
     "test:user": "jest src/reducers/user.test.js",
@@ -97,15 +98,23 @@
     "dist"
   ],
   "dependencies": {
-    "@reduxjs/toolkit": "^1.3.2",
+    "@apollo/client": "^3.0.0-beta.43",
+    "@apollo/link-ws": "^2.0.0-beta.3",
+    "@reduxjs/toolkit": "^1.3.5",
     "axios": "^0.19.0",
     "axios-retry": "^3.1.2",
     "core-js": "^3.3.6",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "get-value": "^3.0.1",
+    "graphql": "^14.6.0",
+    "graphql-normalizr": "^2.10.1",
+    "graphql-subscriptions-client": "^0.12.0",
     "is-retry-allowed": "^1.2.0",
     "lodash": "^4.17.14",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8"
+    "normalizr": "^3.6.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "subscriptions-transport-ws": "^0.9.16",
+    "uuid": "^7.0.3"
   }
 }
